Update to 2.6.38.4:   - obsoletes:     - patches.arch/i386-unwind-annotations.     - patches.drivers/alsa-hda-0018-Fix-pin-config-of-Gigabyte-mobo.     - patches.fixes/cdc-phonet-handle-empty-phonet-header.patch.     - patches.fixes/media-video-sn9c102-world-wirtable-sysfs-files.     - patches.fixes/ubifs-restrict-world-writable-debugfs-files.     - patches.rpmify/ia64-mca-fix-cast-from-integer-to-pointer-warning.     - patches.rpmify/tioca-fix-assignment-from-incompatible-pointer-warnings. - Refresh patches.xen/xen3-auto-common.diff. - Refresh patches.xen/xen3-patch-2.6.27. - Update config files.

--- a/series.conf
+++ b/series.conf
@@ -30,14 +30,13 @@
 	patches.kernel.org/patch-2.6.38.1
 	patches.kernel.org/patch-2.6.38.1-2
 	patches.kernel.org/patch-2.6.38.2-3
+	patches.kernel.org/patch-2.6.38.3-4
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
 	# Patches in patches.rpmify are applied to both -vanilla
 	# and patched flavors.
         ########################################################
-	patches.rpmify/tioca-fix-assignment-from-incompatible-pointer-warnings
-	patches.rpmify/ia64-mca-fix-cast-from-integer-to-pointer-warning
 	patches.rpmify/qla4xx-missing-readq-definition
 	patches.rpmify/dw_spi-fix-PPC-build.patch
 
@@ -217,9 +216,7 @@
 	patches.suse/connector-read-mostly
 	patches.suse/kbd-ignore-gfx.patch
 
-	patches.fixes/media-video-sn9c102-world-wirtable-sysfs-files
 	patches.fixes/scsi-aic94xx-world-writable-sysfs-update_bios-file
-	patches.fixes/ubifs-restrict-world-writable-debugfs-files
 
 	########################################################
 	#
@@ -551,7 +548,6 @@
 	########################################################
 	# USB
 	########################################################
-	patches.fixes/cdc-phonet-handle-empty-phonet-header.patch
 
 	########################################################
 	# I2C
@@ -574,7 +570,6 @@
 	##########################################################
 	# Sound
 	##########################################################
-	patches.drivers/alsa-hda-0018-Fix-pin-config-of-Gigabyte-mobo
 	patches.drivers/alsa-hda-0019-Increase-default-buffer-size
 
 	patches.drivers/alsa-asihpi-check-adapter-index-in-hpi_ioctl
@@ -654,7 +649,6 @@
 	patches.suse/stack-unwind
 	patches.suse/no-frame-pointer-select
 	patches.arch/x86_64-unwind-annotations
-	patches.arch/i386-unwind-annotations
 
         ########################################################
         # Kdump
