- XEN: add fixup_4gb_segment ENDPROC. - Refresh patches.xen/xen3-patch-2.6.19. - Refresh patches.xen/xen3-patch-2.6.21. - Refresh patches.xen/xen3-patch-2.6.33. - Refresh patches.xen/xen3-patch-2.6.37.
Now, with binutils 2.21.0 we see build errors like:
arch/x86/kernel/entry_32-xen.S: Assembler messages:
arch/x86/kernel/entry_32-xen.S:1734: Error: .size expression for spurious_interrupt_bug does not evaluate to a constant

BS doesn't complain about this yet, only abuild.

--- a/series.conf
+++ b/series.conf
@@ -735,6 +735,7 @@
 
 	# bulk stuff, new files for xen
 	patches.xen/xen3-auto-xen-arch.diff
+	patches.xen/add-fixup_4gb_segment-ENDPROC.patch
 	patches.xen/xen3-auto-xen-drivers.diff
 	patches.xen/xen3-auto-include-xen-interface.diff
 	patches.xen/xen3-auto-blktap2-pvops.diff
