- HID: add noget quirk barcode scanners from Symbol Technologies   (bnc#689290).

--- a/series.conf
+++ b/series.conf
@@ -573,6 +573,7 @@
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
 	patches.drivers/input-Add-LED-support-to-Synaptics-device
 	patches.fixes/hid-add-support-for-Skycable-0x3f07-wireless-present.patch
+	patches.fixes/hid-add-noget-quirk-for-symboltec.patch
 
 	##########################################################
 	# Sound
