- HID: add noget quirk barcode scanners from Symbol Technologies   (bnc#689290).

--- a/series.conf
+++ b/series.conf
@@ -567,6 +567,7 @@
 	patches.suse/elousb-2.6.35-api-changes
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
 	patches.drivers/input-Add-LED-support-to-Synaptics-device
+	patches.fixes/hid-add-noget-quirk-for-symboltec.patch
 
 	##########################################################
 	# Sound
