--- a/series.conf
+++ b/series.conf
@@ -287,6 +287,7 @@
         ########################################################
 	patches.fixes/bridge-module-get-put.patch
 	patches.fixes/bonding-Incorrect-TX-queue-offset.patch
+	patches.fixes/cdc-phonet-fix-stop-queue-handling.patch
 
 	########################################################
 	# NFS
