- btrfs: return EXDEV when linking from different subvolumes   (bnc#679545).

--- a/series.conf
+++ b/series.conf
@@ -319,6 +319,7 @@
 	########################################################
 	# btrfs
 	########################################################
+	patches.fixes/btrfs-return-EXDEV-when-linking-from-different-subvo.patch
 
 	########################################################
 	# Reiserfs Patches
