- Fix checking of login id (bnc#626119).

--- a/series.conf
+++ b/series.conf
@@ -371,6 +371,7 @@
 	patches.suse/novfs-2.6.37-api-changes
 	patches.fixes/novfs-fragment-size-fix.patch
 	patches.suse/novfs-build-fix
+	patches.fixes/novfs-nwcapi.patch
 
 	########################################################
 	# other filesystem stuff: richacls
