- Fix checking of login id (bnc#626119).

--- a/series.conf
+++ b/series.conf
@@ -311,6 +311,7 @@
 	# novfs
 	########################################################
 	patches.suse/novfs-client-module
+	patches.fixes/novfs-nwcapi.patch
 
 	########################################################
 	# other filesystem stuff: richacls
