- Refresh   patches.fixes/iwlwifi-fix-tx-power-configuration-on-3945-and-4965-devices.

--- a/series.conf
+++ b/series.conf
@@ -417,7 +417,7 @@
 	# Wireless Networking
 	########################################################
 	patches.suse/b43-missing-firmware-info.patch
-+needs_update	patches.fixes/iwlwifi-fix-tx-power-configuration-on-3945-and-4965-devices
+	patches.fixes/iwlwifi-fix-tx-power-configuration-on-3945-and-4965-devices
 
 	########################################################
 	# ISDN
