- Refresh   patches.fixes/iwlwifi-fix-tx-power-configuration-on-3945-and-4965-devices.

--- a/series.conf
+++ b/series.conf
@@ -529,7 +529,7 @@
 	########################################################
 	patches.suse/wireless-no-aes-select
 	patches.suse/b43-missing-firmware-info.patch
-+needs_update	patches.fixes/iwlwifi-fix-tx-power-configuration-on-3945-and-4965-devices
+	patches.fixes/iwlwifi-fix-tx-power-configuration-on-3945-and-4965-devices
 
 	########################################################
 	# ISDN
