- Linux 2.6.38.5. - Delete   patches.fixes/flexcop-fix-registering-braindead-stupid-names.

--- a/series.conf
+++ b/series.conf
@@ -31,6 +31,7 @@
 	patches.kernel.org/patch-2.6.38.1-2
 	patches.kernel.org/patch-2.6.38.2-3
 	patches.kernel.org/patch-2.6.38.3-4
+	patches.kernel.org/patch-2.6.38.4-5
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -505,7 +506,6 @@
 	########################################################
 	# video4linux
 	########################################################
-	patches.fixes/flexcop-fix-registering-braindead-stupid-names
 
 	########################################################
 	# Network
