- rpm/kernel-{binary,source}.spec.in: Install per-kernel /boot/sysctl-*   files (patch from Jeff Mahoney).

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -452,6 +452,15 @@ ln -s $image$suffix %buildroot/boot/$image$suffix
 ln -s initrd$suffix %buildroot/boot/initrd$suffix
 
 cp -p .config %buildroot/boot/config-%kernelrelease-%build_flavor
+sysctl_file=%buildroot/boot/sysctl.conf-%kernelrelease-%build_flavor
+for file in %my_builddir/sysctl/{defaults,%cpu_arch/arch-defaults,%cpu_arch_flavor}; do
+	if [ -f "$file" ]; then
+		cat "$file"
+	fi
+done | sed '1i # Generated file - do not edit.' >$sysctl_file
+if [ ! -s $sysctl_file ]; then
+	rm $sysctl_file
+fi
 
 %if %install_vdso
 # Install the unstripped vdso's that are linked in the kernel image
