--- a/rpm/kernel-source.spec.in
+++ b/rpm/kernel-source.spec.in
@@ -101,6 +101,7 @@ Source111:      patches.rt.tar.bz2
 Source112:      patches.trace.tar.bz2
 Source113:      patches.kabi.tar.bz2
 Source120:      kabi.tar.bz2
+Source121:      sysctl.tar.bz2
 BuildRoot:      %{_tmppath}/%{name}-%{version}-build
 BuildArch:      noarch
 Prefix:         /usr/src
