- Disabled patches.drivers/libata-unlock-hpa-by-default; It may have   been obsoleted by upstream commit d8d9129e.

--- a/series.conf
+++ b/series.conf
@@ -351,8 +351,9 @@
 	# Storage
 	########################################################
 
-	# libata
-	patches.drivers/libata-unlock-hpa-by-default
+	# I believe this has been obsoleted upstream by
+	# commit d8d9129e
++disabled	patches.drivers/libata-unlock-hpa-by-default
 
 	# Block layer fixes
 	patches.fixes/scsi-inquiry-too-short-ratelimit
