- Update Xen patches to 2.6.39-rc6.

--- a/series.conf
+++ b/series.conf
@@ -629,6 +629,7 @@
 	patches.xen/xen3-patch-2.6.37
 	patches.xen/xen3-patch-2.6.38
 	patches.xen/xen3-patch-2.6.39-rc3
+	patches.xen/xen3-patch-2.6.39-rc5-rc6
 	patches.xen/xen3-stack-unwind
 	patches.xen/xen3-x86_64-unwind-annotations
 
