- Linux 2.6.38.6. - Refresh patches.fixes/scsi-dh-queuedata-accessors.

--- a/series.conf
+++ b/series.conf
@@ -32,6 +32,7 @@
 	patches.kernel.org/patch-2.6.38.2-3
 	patches.kernel.org/patch-2.6.38.3-4
 	patches.kernel.org/patch-2.6.38.4-5
+	patches.kernel.org/patch-2.6.38.5-6
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
