--- a/series.conf
+++ b/series.conf
@@ -33,6 +33,7 @@
 	patches.kernel.org/patch-2.6.38.3-4
 	patches.kernel.org/patch-2.6.38.4-5
 	patches.kernel.org/patch-2.6.38.5-6
+	patches.kernel.org/libata-fix-oops-when-lpm-is-used-with-pmp.patch
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
