- block: add proper state guards to __elv_next_request.

--- a/series.conf
+++ b/series.conf
@@ -493,6 +493,7 @@
 	patches.fixes/scsi-check-host-lookup-failure
 	patches.drivers/megaraid-mbox-fix-SG_IO
 +needs_update-35	patches.drivers/qla4xxx-5.01.00-k9-5.01.00.00.11.01-k10.patch
+	patches.fixes/block-add-proper-state-guards-to-__elv_next_request.patch
 
 	# Remaining SCSI patches (garloff)
 	patches.suse/scsi-error-test-unit-ready-timeout
