- block: add proper state guards to __elv_next_request.

--- a/series.conf
+++ b/series.conf
@@ -372,6 +372,7 @@
 	patches.fixes/sd_liberal_28_sense_invalid.diff
 
 	patches.fixes/scsi-ibmvscsi-module_alias.patch
+	patches.fixes/block-add-proper-state-guards-to-__elv_next_request.patch
 
 	########################################################
 	# DRM/Video
