- mm: add alloc_pages_exact_nid() (bnc#692502, bnc#669889).

--- a/series.conf
+++ b/series.conf
@@ -202,6 +202,7 @@
 +36	patches.fixes/aggressive-zone-reclaim.patch
 	patches.suse/readahead-request-tunables.patch
 	patches.fixes/page_cgroup-reduce-allocation-overhead.patch
+	patches.fixes/mm-add-alloc_pages_exact_nid.patch
 
         ########################################################
         # IPC patches
