- memcg: allocate memory cgroup structures in local nodes   (bnc#692502, bnc#669889).

--- a/series.conf
+++ b/series.conf
@@ -203,6 +203,7 @@
 	patches.suse/readahead-request-tunables.patch
 	patches.fixes/page_cgroup-reduce-allocation-overhead.patch
 	patches.fixes/mm-add-alloc_pages_exact_nid.patch
+	patches.fixes/memcg-allocate-memory-cgroup-structures-in-local-nod.patch
 
         ########################################################
         # IPC patches
