eeepc-laptop: Use ACPI handle to identify rfkill port (bnc#595586).

--- a/series.conf
+++ b/series.conf
@@ -597,6 +597,7 @@
 	# Allow setting maximum number of raw devices
 	patches.suse/raw_device_max_minors_param.diff
 	patches.suse/no-partition-scan
+	patches.fixes/eeepc-laptop-Use-ACPI-handle-to-identify-rfkill-port.patch
 
 	########################################################
 	# Other drivers we have added to the tree
