--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -266,18 +266,12 @@ make clean $MAKE_ARGS
 rm -f source
 find . ! -type d -printf '%%P\n' > %my_builddir/obj-files
 
+# Override the timestamp 'uname -v' reports with the source timestamp and
+# the commit hash.
+date=$(head -n 1 %_sourcedir/source-timestamp)
+commit=$(sed -n 's/GIT Revision: //p' %_sourcedir/source-timestamp)
 cat > .kernel-binary.spec.buildenv <<EOF
-# Override the timestamp 'uname -v' reports with the build
-# timestamp.
-export KBUILD_BUILD_TIMESTAMP="$(head -n 1 %_sourcedir/source-timestamp)"
-
-# The following branch/timestamp will end up in Oopses.
-export OOPS_TIMESTAMP="$(
-    echo -n $(sed -ne 's/^GIT Branch: \(.*\)/\1-/p' \
-		  %_sourcedir/source-timestamp)
-    head -n 1 %_sourcedir/source-timestamp \
-	| tr -dc 0-9)"
-
+export KBUILD_BUILD_TIMESTAMP="$(LANG=C date -d "$date") (${commit:0:7})"
 export KBUILD_VERBOSE=0
 export KBUILD_SYMTYPES=1
 export KBUILD_OVERRIDE=1
