--- a/supported.conf
+++ b/supported.conf
@@ -2047,7 +2047,8 @@
 		kernel/drivers/xen/blkback/blkback-pagemap
 +base		kernel/drivers/xen/blkfront/xenblk			# Xen block device frontend
 		kernel/drivers/xen/blktap/blktap
--		kernel/drivers/xen/blktap2/blktap2
+		kernel/drivers/xen/blktap2/blktap2
+		kernel/drivers/xen/blktap2/blktap2-new
 		kernel/drivers/xen/core/domctl
 		kernel/drivers/xen/evtchn
 		kernel/drivers/xen/gntdev/gntdev
