--- a/series.conf
+++ b/series.conf
@@ -449,6 +449,7 @@
 	########################################################
 	# Suspend/Resume stuff
 	########################################################
+	patches.fixes/PM-Print-a-warning-if-firmware-is-requested-when-tas.patch
 
 	########################################################
 	# device-mapper
