- Update Xen patches to 2.6.39 final and c/s 1085. - xen/sfc_netfront: fix an unused variable error.

--- a/series.conf
+++ b/series.conf
@@ -621,8 +621,7 @@
 	patches.xen/xen3-patch-2.6.36
 	patches.xen/xen3-patch-2.6.37
 	patches.xen/xen3-patch-2.6.38
-	patches.xen/xen3-patch-2.6.39-rc3
-	patches.xen/xen3-patch-2.6.39-rc5-rc6
+	patches.xen/xen3-patch-2.6.39
 	patches.xen/xen3-stack-unwind
 	patches.xen/xen3-x86_64-unwind-annotations
 
@@ -653,7 +652,6 @@
 	patches.xen/xen-netback-generalize
 	patches.xen/xen-netback-multiple-tasklets
 	patches.xen/xen-netback-kernel-threads
-	patches.xen/xen-tmem-v1
 	patches.xen/xen-cxgb3
 	patches.xen/xen-dcdbas
 	patches.xen/xen-floppy
@@ -661,6 +659,7 @@
 	patches.xen/xen-kzalloc
 	patches.xen/xen-unpriv-build
 	patches.xen/xen-setup-gsi
+	patches.xen/xen-sfc-netfront-gcc46
 	patches.xen/xen-x86-panic-no-reboot
 	patches.xen/xen-x86-dcr-fallback
 	patches.xen/xen-x86-no-lapic
