rpm/kernel-binary.spec.in: Set KBUILD_BUILD_{USER,HOST} to geeko@buildhost, obsoleting the patch to scripts/mkcompile_h.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -275,6 +275,8 @@ export KBUILD_BUILD_TIMESTAMP="$(LANG=C date -d "$date") (${commit:0:7})"
 export KBUILD_VERBOSE=0
 export KBUILD_SYMTYPES=1
 export KBUILD_OVERRIDE=1
+export KBUILD_BUILD_USER=geeko
+export KBUILD_BUILD_HOST=buildhost
 EOF
 
 %build
