--- a/series.conf
+++ b/series.conf
@@ -169,6 +169,7 @@
 
 	patches.suse/readahead-request-tunables.patch
 	patches.fixes/fs-partitions-efi-c-corrupted-guid-partition-tables-can-cause-kernel-oops
+	patches.fixes/mm-Fix-assertion-mapping-nrpages-0-in-end_writeback.patch
 
         ########################################################
         # IPC patches
