--- a/series.conf
+++ b/series.conf
@@ -27,6 +27,7 @@
 	# DO NOT MODIFY THEM!
 	# Send separate patches upstream if you find a problem...
 	########################################################
+	patches.kernel.org/patch-2.6.39.1
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -373,7 +374,6 @@
 	patches.fixes/sd_liberal_28_sense_invalid.diff
 
 	patches.fixes/scsi-ibmvscsi-module_alias.patch
-	patches.fixes/block-add-proper-state-guards-to-__elv_next_request.patch
 
 	########################################################
 	# DRM/Video
