scripts/kmsg-doc: Do not require Switch.pm.

--- a/series.conf
+++ b/series.conf
@@ -154,6 +154,7 @@
 	########################################################
 	patches.arch/s390-message-catalog.diff
 	patches.arch/s390-message-catalog-fix.diff
+	patches.arch/s390-message-catalog-perl-fix.diff
 	patches.arch/kmsg-fix-parameter-limitations
 
 	patches.suse/s390-Kerntypes.diff
