asus-wmi: Remove __init from asus_wmi_platform_init (bnc#696212).

--- a/series.conf
+++ b/series.conf
@@ -442,6 +442,7 @@
 	# Allow setting maximum number of raw devices
 	patches.suse/raw_device_max_minors_param.diff
 	patches.suse/no-partition-scan
+	patches.fixes/asus-wmi-Remove-__init-from-asus_wmi_platform_init.patch
 
 	########################################################
 	# Other drivers we have added to the tree
