Revert "x86, efi: Retain boot service code until after switching to virtual mode".

--- a/series.conf
+++ b/series.conf
@@ -28,6 +28,7 @@
 	# Send separate patches upstream if you find a problem...
 	########################################################
 	patches.kernel.org/patch-2.6.39.1
+	patches.kernel.org/0001-Revert-x86-efi-Retain-boot-service-code-until-after-.patch
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
