Revert "HID: magicmouse: ignore 'ivalid report id' while switching modes".

--- a/series.conf
+++ b/series.conf
@@ -29,6 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-2.6.39.1
 	patches.kernel.org/0001-Revert-x86-efi-Retain-boot-service-code-until-after-.patch
+	patches.kernel.org/0002-Revert-HID-magicmouse-ignore-ivalid-report-id-while-.patch
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
