stop_machine: enable __stop_machine() to be called from the cpu online path (bnc#672008).

--- a/series.conf
+++ b/series.conf
@@ -111,6 +111,8 @@
 +needs_update	patches.arch/kvm-split-the-KVM-pv-ops-support-by-feature
 +needs_update	patches.arch/kvm-replace-kvm-io-delay-pv-ops-with-linux-magic
 
+	patches.fixes/x86_mtrr_stop_machine_1_2.patch
+
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
         ########################################################
