x86, mtrr: use __stop_machine() for doing MTRR rendezvous (bnc#672008).

--- a/series.conf
+++ b/series.conf
@@ -112,6 +112,7 @@
 +needs_update	patches.arch/kvm-replace-kvm-io-delay-pv-ops-with-linux-magic
 
 	patches.fixes/x86_mtrr_stop_machine_1_2.patch
+	patches.fixes/x86_mtrr_use_stop_machine_2_2.patch
 
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
