--- a/series.conf
+++ b/series.conf
@@ -34,7 +34,6 @@
 	# and patched flavors.
         ########################################################
 	patches.rpmify/qla4xx-missing-readq-definition
-	patches.rpmify/kvm-fix-off-by-one-in-kvm_for_each_vcpu-iteration
 
         ########################################################
         # kABI consistency patches
@@ -53,7 +52,6 @@
 
 	patches.rpmify/rpm-kernel-config
 	patches.rpmify/split-package
-	patches.rpmify/buildhost
 	patches.rpmify/cloneconfig.diff
 
         ########################################################
@@ -87,7 +85,6 @@
         ########################################################
 	# ia64
         ########################################################
-	patches.fixes/ia64-sparse-fixes.diff
 
         ########################################################
 	# i386
@@ -188,8 +185,6 @@
 	########################################################
 	patches.suse/connector-read-mostly
 	patches.suse/kbd-ignore-gfx.patch
-
-	patches.fixes/scsi-aic94xx-world-writable-sysfs-update_bios-file
 
 	########################################################
 	#
@@ -300,6 +295,7 @@
 	########################################################
 	patches.suse/novfs-client-module
 	patches.fixes/novfs-nwcapi.patch
+	patches.suse/novfs-remove-bkl
 
 	########################################################
 	# other filesystem stuff: richacls
@@ -370,14 +366,11 @@
 	patches.suse/scsi-error-test-unit-ready-timeout
 	patches.fixes/scsi-scan-blist-update
 
-	patches.fixes/proc-scsi-scsi-fix.diff
-
 	patches.fixes/scsi-ibmvscsi-show-config.patch
 	# bnc#362850
 	patches.fixes/sd_liberal_28_sense_invalid.diff
 
 	patches.fixes/scsi-ibmvscsi-module_alias.patch
-	patches.fixes/block-add-proper-state-guards-to-__elv_next_request.patch
 
 	########################################################
 	# DRM/Video
@@ -431,7 +424,6 @@
 	patches.suse/elousb-2.6.35-api-changes
 	patches.fixes/input-add-acer-aspire-5710-to-nomux.patch
 	patches.drivers/input-Add-LED-support-to-Synaptics-device
-	patches.fixes/hid-add-noget-quirk-for-symboltec.patch
 
 	##########################################################
 	# Sound
@@ -443,8 +435,6 @@
 	########################################################
 	patches.fixes/parport-mutex
 
-	# Allow setting maximum number of raw devices
-	patches.suse/raw_device_max_minors_param.diff
 	patches.suse/no-partition-scan
 	patches.fixes/asus-wmi-Remove-__init-from-asus_wmi_platform_init.patch
 
@@ -455,7 +445,6 @@
 	########################################################
 	# Suspend/Resume stuff
 	########################################################
-	patches.fixes/PM-Print-a-warning-if-firmware-is-requested-when-tas.patch
 
 	########################################################
 	# device-mapper
@@ -467,6 +456,7 @@
 	patches.suse/dm-raid45-api-update-remove-dm_put-after-dm_table_get_md
 	patches.suse/dm-raid45-api-update-no-barriers
 	patches.suse/dm-raid45-api-2.6.39
+	patches.suse/dm-raid45-api-3.0
 	patches.fixes/dm-mpath-reattach-dh
 	patches.suse/dm-mpath-leastpending-path-update
 +needs_update	patches.suse/dm-mpath-accept-failed-paths
@@ -562,113 +552,114 @@
 # re-basing to a newer xen tree.
 #
 	### both uml framebuffer and xen need this one.
-	patches.xen/add-console-use-vt
++xen_needs_update	patches.xen/add-console-use-vt
++xen_needs_update
++xen_needs_update	# split out patches
++xen_needs_update	patches.xen/linux-2.6.19-rc1-kexec-move_segment_code-i386.patch
++xen_needs_update	patches.xen/linux-2.6.19-rc1-kexec-move_segment_code-x86_64.patch
++xen_needs_update	patches.xen/ipv6-no-autoconf
++xen_needs_update	patches.xen/pci-guestdev
++xen_needs_update	patches.xen/pci-reserve
++xen_needs_update	patches.xen/tmem
++xen_needs_update
++xen_needs_update	# bulk stuff, new files for xen
++xen_needs_update	patches.xen/xen3-auto-xen-arch.diff
++xen_needs_update	patches.xen/xen3-auto-xen-drivers.diff
++xen_needs_update	patches.xen/xen3-auto-include-xen-interface.diff
++xen_needs_update	patches.xen/xen3-auto-blktap2-pvops.diff
++xen_needs_update
++xen_needs_update	# kconfig bits for xen
++xen_needs_update	patches.xen/xen3-auto-xen-kconfig.diff
++xen_needs_update
++xen_needs_update	# common code changes
++xen_needs_update	patches.xen/xen3-auto-common.diff
++xen_needs_update	patches.xen/xen3-auto-arch-x86.diff
++xen_needs_update	patches.xen/xen3-auto-arch-i386.diff
++xen_needs_update	patches.xen/xen3-auto-arch-x86_64.diff
++xen_needs_update
++xen_needs_update	# fixups due to upstream Xen parts
++xen_needs_update	patches.xen/xen3-fixup-xen
++xen_needs_update
++xen_needs_update	# newer changeset backports
++xen_needs_update
++xen_needs_update	# changes outside arch/{i386,x86_64}/xen
++xen_needs_update	patches.xen/xen3-fixup-kconfig
++xen_needs_update	patches.xen/xen3-fixup-common
++xen_needs_update	patches.xen/xen3-fixup-arch-x86
++xen_needs_update	patches.xen/xen3-fixup-blktap2-pvops
++xen_needs_update
++xen_needs_update	# ports of other patches
++xen_needs_update	patches.xen/xen3-patch-2.6.18
++xen_needs_update	patches.xen/xen3-patch-2.6.19
++xen_needs_update	patches.xen/xen3-patch-2.6.20
++xen_needs_update	patches.xen/xen3-patch-2.6.21
++xen_needs_update	patches.xen/xen3-patch-2.6.22
++xen_needs_update	patches.xen/xen3-patch-2.6.23
++xen_needs_update	patches.xen/xen3-patch-2.6.24
++xen_needs_update	patches.xen/xen3-patch-2.6.25
++xen_needs_update	patches.xen/xen3-patch-2.6.26
++xen_needs_update	patches.xen/xen3-patch-2.6.27
++xen_needs_update	patches.xen/xen3-patch-2.6.28
++xen_needs_update	patches.xen/xen3-patch-2.6.29
++xen_needs_update	patches.xen/xen3-patch-2.6.30
++xen_needs_update	patches.xen/xen3-patch-2.6.31
++xen_needs_update	patches.xen/xen3-patch-2.6.32
++xen_needs_update	patches.xen/xen3-patch-2.6.33
++xen_needs_update	patches.xen/xen3-patch-2.6.34
++xen_needs_update	patches.xen/xen3-patch-2.6.35
++xen_needs_update	patches.xen/xen3-patch-2.6.36
++xen_needs_update	patches.xen/xen3-patch-2.6.37
++xen_needs_update	patches.xen/xen3-patch-2.6.38
++xen_needs_update	patches.xen/xen3-patch-2.6.39
++xen_needs_update	patches.xen/xen3-stack-unwind
++xen_needs_update	patches.xen/xen3-x86_64-unwind-annotations
++xen_needs_update
++xen_needs_update	# bugfixes and enhancements
++xen_needs_update	patches.xen/xen-balloon-max-target
++xen_needs_update	patches.xen/xen-blkback-bimodal-suse
++xen_needs_update	patches.xen/xen-blkif-protocol-fallback-hack
++xen_needs_update	patches.xen/xen-blkback-cdrom
++xen_needs_update	patches.xen/xen-blktap-modular
++xen_needs_update	patches.xen/xen-blktap-write-barriers
++xen_needs_update	patches.xen/xen-blktap2-use-after-free
++xen_needs_update	patches.xen/xen-blktap2-configurable-nr-devs
++xen_needs_update	patches.xen/xen-op-packet
++xen_needs_update	patches.xen/xen-blkfront-cdrom
++xen_needs_update	patches.xen/xen-kconfig-compat
++xen_needs_update	patches.xen/xen-cpufreq-report
++xen_needs_update	patches.xen/xen-sys-suspend
++xen_needs_update	patches.xen/xen-ipi-per-cpu-irq
++xen_needs_update	patches.xen/xen-virq-per-cpu-irq
++xen_needs_update	patches.xen/xen-clockevents
++xen_needs_update	patches.xen/xen-spinlock-poll-early
++xen_needs_update	patches.xen/xen-pcpu-hotplug
++xen_needs_update	patches.xen/xen-mem-hotplug
++xen_needs_update	patches.xen/xen-swiotlb-heuristics
++xen_needs_update	patches.xen/xen-configurable-guest-devices
++xen_needs_update	patches.xen/xen-netback-nr-irqs
++xen_needs_update	patches.xen/xen-netback-notify-multi
++xen_needs_update	patches.xen/xen-netback-generalize
++xen_needs_update	patches.xen/xen-netback-multiple-tasklets
++xen_needs_update	patches.xen/xen-netback-kernel-threads
++xen_needs_update	patches.xen/xen-cxgb3
++xen_needs_update	patches.xen/xen-dcdbas
++xen_needs_update	patches.xen/xen-floppy
++xen_needs_update	patches.xen/xen-sections
++xen_needs_update	patches.xen/xen-kzalloc
++xen_needs_update	patches.xen/xen-unpriv-build
++xen_needs_update	patches.xen/xen-setup-gsi
++xen_needs_update	patches.xen/xen-sfc-netfront-gcc46
++xen_needs_update	patches.xen/xen-x86-panic-no-reboot
++xen_needs_update	patches.xen/xen-x86-dcr-fallback
++xen_needs_update	patches.xen/xen-x86-no-lapic
++xen_needs_update	patches.xen/xen-x86-pmd-handling
++xen_needs_update	patches.xen/xen-x86-bigmem
++xen_needs_update	patches.xen/xen-x86-exit-mmap
++xen_needs_update	patches.xen/xen-x86-per-cpu-vcpu-info
++xen_needs_update	patches.xen/xen-x86-msr-on-pcpu
++xen_needs_update	patches.xen/xen-x86_64-pgd-pin
++xen_needs_update	patches.xen/xen-x86_64-pgd-alloc-order
++xen_needs_update	patches.xen/xen-x86_64-dump-user-pgt
++xen_needs_update	patches.xen/xen-x86_64-note-init-p2m
++xen_needs_update	patches.xen/xen-x86_64-unmapped-initrd
 
-	# split out patches
-	patches.xen/linux-2.6.19-rc1-kexec-move_segment_code-i386.patch
-	patches.xen/linux-2.6.19-rc1-kexec-move_segment_code-x86_64.patch
-	patches.xen/ipv6-no-autoconf
-	patches.xen/pci-guestdev
-	patches.xen/pci-reserve
-	patches.xen/tmem
-
-	# bulk stuff, new files for xen
-	patches.xen/xen3-auto-xen-arch.diff
-	patches.xen/xen3-auto-xen-drivers.diff
-	patches.xen/xen3-auto-include-xen-interface.diff
-	patches.xen/xen3-auto-blktap2-pvops.diff
-
-	# kconfig bits for xen
-	patches.xen/xen3-auto-xen-kconfig.diff
-
-	# common code changes
-	patches.xen/xen3-auto-common.diff
-	patches.xen/xen3-auto-arch-x86.diff
-	patches.xen/xen3-auto-arch-i386.diff
-	patches.xen/xen3-auto-arch-x86_64.diff
-
-	# fixups due to upstream Xen parts
-	patches.xen/xen3-fixup-xen
-
-	# newer changeset backports
-
-	# changes outside arch/{i386,x86_64}/xen
-	patches.xen/xen3-fixup-kconfig
-	patches.xen/xen3-fixup-common
-	patches.xen/xen3-fixup-arch-x86
-	patches.xen/xen3-fixup-blktap2-pvops
-
-	# ports of other patches
-	patches.xen/xen3-patch-2.6.18
-	patches.xen/xen3-patch-2.6.19
-	patches.xen/xen3-patch-2.6.20
-	patches.xen/xen3-patch-2.6.21
-	patches.xen/xen3-patch-2.6.22
-	patches.xen/xen3-patch-2.6.23
-	patches.xen/xen3-patch-2.6.24
-	patches.xen/xen3-patch-2.6.25
-	patches.xen/xen3-patch-2.6.26
-	patches.xen/xen3-patch-2.6.27
-	patches.xen/xen3-patch-2.6.28
-	patches.xen/xen3-patch-2.6.29
-	patches.xen/xen3-patch-2.6.30
-	patches.xen/xen3-patch-2.6.31
-	patches.xen/xen3-patch-2.6.32
-	patches.xen/xen3-patch-2.6.33
-	patches.xen/xen3-patch-2.6.34
-	patches.xen/xen3-patch-2.6.35
-	patches.xen/xen3-patch-2.6.36
-	patches.xen/xen3-patch-2.6.37
-	patches.xen/xen3-patch-2.6.38
-	patches.xen/xen3-patch-2.6.39
-	patches.xen/xen3-stack-unwind
-	patches.xen/xen3-x86_64-unwind-annotations
-
-	# bugfixes and enhancements
-	patches.xen/xen-balloon-max-target
-	patches.xen/xen-blkback-bimodal-suse
-	patches.xen/xen-blkif-protocol-fallback-hack
-	patches.xen/xen-blkback-cdrom
-	patches.xen/xen-blktap-modular
-	patches.xen/xen-blktap-write-barriers
-	patches.xen/xen-blktap2-use-after-free
-	patches.xen/xen-blktap2-configurable-nr-devs
-	patches.xen/xen-op-packet
-	patches.xen/xen-blkfront-cdrom
-	patches.xen/xen-kconfig-compat
-	patches.xen/xen-cpufreq-report
-	patches.xen/xen-sys-suspend
-	patches.xen/xen-ipi-per-cpu-irq
-	patches.xen/xen-virq-per-cpu-irq
-	patches.xen/xen-clockevents
-	patches.xen/xen-spinlock-poll-early
-	patches.xen/xen-pcpu-hotplug
-	patches.xen/xen-mem-hotplug
-	patches.xen/xen-swiotlb-heuristics
-	patches.xen/xen-configurable-guest-devices
-	patches.xen/xen-netback-nr-irqs
-	patches.xen/xen-netback-notify-multi
-	patches.xen/xen-netback-generalize
-	patches.xen/xen-netback-multiple-tasklets
-	patches.xen/xen-netback-kernel-threads
-	patches.xen/xen-cxgb3
-	patches.xen/xen-dcdbas
-	patches.xen/xen-floppy
-	patches.xen/xen-sections
-	patches.xen/xen-kzalloc
-	patches.xen/xen-unpriv-build
-	patches.xen/xen-setup-gsi
-	patches.xen/xen-sfc-netfront-gcc46
-	patches.xen/xen-x86-panic-no-reboot
-	patches.xen/xen-x86-dcr-fallback
-	patches.xen/xen-x86-no-lapic
-	patches.xen/xen-x86-pmd-handling
-	patches.xen/xen-x86-bigmem
-	patches.xen/xen-x86-exit-mmap
-	patches.xen/xen-x86-per-cpu-vcpu-info
-	patches.xen/xen-x86-msr-on-pcpu
-	patches.xen/xen-x86_64-pgd-pin
-	patches.xen/xen-x86_64-pgd-alloc-order
-	patches.xen/xen-x86_64-dump-user-pgt
-	patches.xen/xen-x86_64-note-init-p2m
-	patches.xen/xen-x86_64-unmapped-initrd
