- x86: Remove warning and warning_symbol from struct   stacktrace_ops. - Delete   patches.fixes/asus-wmi-Remove-__init-from-asus_wmi_platform_init.patch.

--- a/series.conf
+++ b/series.conf
@@ -436,7 +436,6 @@
 	patches.fixes/parport-mutex
 
 	patches.suse/no-partition-scan
-	patches.fixes/asus-wmi-Remove-__init-from-asus_wmi_platform_init.patch
 
 	########################################################
 	# Other drivers we have added to the tree
@@ -503,6 +502,7 @@
         ########################################################
 	patches.suse/crasher-26.diff
 	patches.suse/stack-unwind
+	patches.suse/revert-x86-remove-warning-and-warning_symbol-from-struct-stacktrace_ops
 	patches.suse/no-frame-pointer-select
 	patches.arch/x86_64-unwind-annotations
 
