--- a/series.conf
+++ b/series.conf
@@ -27,6 +27,8 @@
 	# DO NOT MODIFY THEM!
 	# Send separate patches upstream if you find a problem...
 	########################################################
+	patches.kernel.org/kbuild-fix-kernelversion-for-empty-sublevel-or-patchlevel
+	patches.kernel.org/kbuild-fix-linux-version-h-for-empty-sublevel-or-patchlevel
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
