rpm/kernel-binary.spec.in: Call gzip with -n.

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -356,7 +356,7 @@ add_vmlinux()
     fi
 %endif
     if $compressed; then
-	gzip -9 %buildroot/$vmlinux
+	gzip -n -9 %buildroot/$vmlinux
         chmod a-x %buildroot/$vmlinux.gz
     fi
 }
@@ -470,7 +470,7 @@ if [ %CONFIG_MODULES = y ]; then
     mkdir -p %buildroot/usr/src/linux-obj/%cpu_arch
     ln -s %build_flavor %buildroot/usr/src/linux-obj/%cpu_arch_flavor
 
-    gzip -c9 < Module.symvers > %buildroot/boot/symvers-%kernelrelease-%build_flavor.gz
+    gzip -n -c9 < Module.symvers > %buildroot/boot/symvers-%kernelrelease-%build_flavor.gz
 
     make modules_install $MAKE_ARGS INSTALL_MOD_PATH=%buildroot
 
@@ -501,7 +501,7 @@ if [ %CONFIG_MODULES = y ]; then
     # Table of types used in exported symbols (for modversion debugging).
     %_sourcedir/modversions --pack . > %buildroot/boot/symtypes-%kernelrelease-%build_flavor
     if [ -s %buildroot/boot/symtypes-%kernelrelease-%build_flavor ]; then
-	gzip -9 %buildroot/boot/symtypes-%kernelrelease-%build_flavor
+	gzip -n -9 %buildroot/boot/symtypes-%kernelrelease-%build_flavor
     else
 	rm -f %buildroot/boot/symtypes-%kernelrelease-%build_flavor
     fi
