--- a/series.conf
+++ b/series.conf
@@ -35,6 +35,7 @@
 	# Patches in patches.rpmify are applied to both -vanilla
 	# and patched flavors.
         ########################################################
+	patches.rpmify/apm-honor-config_apm_cpu_idle-n
 
         ########################################################
         # kABI consistency patches
