--- a/series.conf
+++ b/series.conf
@@ -36,6 +36,7 @@
 	# and patched flavors.
         ########################################################
 	patches.rpmify/apm-honor-config_apm_cpu_idle-n
+	patches.rpmify/nouveau-make-vga_switcheroo-code-depend-on-vga_switcheroo
 
         ########################################################
         # kABI consistency patches
