--- a/series.conf
+++ b/series.conf
@@ -303,6 +303,7 @@
 	########################################################
 	patches.suse/novfs-client-module
 	patches.fixes/novfs-nwcapi.patch
+	patches.fixes/novfs-copy_user-fixes.diff
 
 	########################################################
 	# other filesystem stuff: richacls
