--- a/series.conf
+++ b/series.conf
@@ -297,6 +297,7 @@
 	patches.suse/novfs-client-module
 	patches.fixes/novfs-nwcapi.patch
 	patches.suse/novfs-remove-bkl
+	patches.fixes/novfs-copy_user-fixes.diff
 
 	########################################################
 	# other filesystem stuff: richacls
