"Unable to save Login Script" appears when trying to save a user login script (bnc#638985).

--- a/series.conf
+++ b/series.conf
@@ -298,6 +298,7 @@
 	patches.fixes/novfs-nwcapi.patch
 	patches.suse/novfs-remove-bkl
 	patches.fixes/novfs-copy_user-fixes.diff
+	patches.fixes/novfs-minsize-fixes
 
 	########################################################
 	# other filesystem stuff: richacls
