rpm/kernel-binary.spec.in: Update comment, get the number of cpus from /proc/stat

--- a/rpm/kernel-binary.spec.in
+++ b/rpm/kernel-binary.spec.in
@@ -291,10 +291,10 @@ fi
 # With plain rpmbuild:
 #     rpmbuild -ba --define 'jobs N' kernel-$flavor.spec
 # To spawn as many jobs as there are cpu cores:
-#     rpmbuild -ba --define "jobs 0$(grep -c ^processor /proc/cpuinfo)" \
+#     rpmbuild -ba --define "jobs 0$(grep -Ec 'cpu[0-9]' /proc/stat)" \
 #         kernel-$flavor.spec
 # You can also set this permanently in ~/.rpmmacros:
-#     %jobs 0%(grep -c ^processor /proc/cpuinfo)
+#     %jobs 0%(grep -Ec 'cpu[0-9]' /proc/stat)
 %if %CONFIG_KMSG_IDS == "y"
     chmod +x ../linux-%srcversion/scripts/kmsg-doc
     make %{?jobs:-j%jobs} all $MAKE_ARGS CONFIG_DEBUG_SECTION_MISMATCH=y D=2
