--- a/series.conf
+++ b/series.conf
@@ -440,6 +440,7 @@
 	##########################################################
 	patches.drivers/alsa-hda-0019-Increase-default-buffer-size
 	patches.drivers/alsa-hda-0022-HD-Audio-patch-for-Intel-Panther-Point
+	patches.drivers/alsa-hda-0023-Enable-sync_write-workaround-for-AMD
 
 	########################################################
 	# Other driver fixes
