ALSA: hda - Enable snoop bit for AMD controllers (bnc#700250,bnc#700251,bnc#700253).

--- a/series.conf
+++ b/series.conf
@@ -441,6 +441,7 @@
 	patches.drivers/alsa-hda-0019-Increase-default-buffer-size
 	patches.drivers/alsa-hda-0022-HD-Audio-patch-for-Intel-Panther-Point
 	patches.drivers/alsa-hda-0023-Enable-sync_write-workaround-for-AMD
+	patches.drivers/alsa-hda-0024-Enable-snoop-bit-for-AMD-controllers
 
 	########################################################
 	# Other driver fixes
