ALSA: hda - ALSA HD Audio patch for Intel Panther Point DeviceIDs (bnc#700250,bnc#700251,bnc#700253).

--- a/series.conf
+++ b/series.conf
@@ -439,6 +439,7 @@
 	# Sound
 	##########################################################
 	patches.drivers/alsa-hda-0019-Increase-default-buffer-size
+	patches.drivers/alsa-hda-0022-HD-Audio-patch-for-Intel-Panther-Point
 
 	########################################################
 	# Other driver fixes
