ALSA: fix hda AZX_DCAPS_NO_TCSEL quirk check in driver_caps (bnc#700250,bnc#700251,bnc#700253).

--- a/series.conf
+++ b/series.conf
@@ -443,6 +443,7 @@
 	patches.drivers/alsa-hda-0023-Enable-sync_write-workaround-for-AMD
 	patches.drivers/alsa-hda-0024-Enable-snoop-bit-for-AMD-controllers
 	patches.drivers/alsa-hda-0026-Reorganize-controller-quriks-with-bit-flags
+	patches.drivers/alsa-hda-0027-fix-AZX_DCAPS_NO_TCSEL-quirk-check-in-drive
 
 	########################################################
 	# Other driver fixes
