- Linux 2.6.39.2. - Delete   patches.fixes/asus-wmi-Remove-__init-from-asus_wmi_platform_init.patch. - Delete   patches.kernel.org/0001-Revert-x86-efi-Retain-boot-service-code-until-after-.patch.

--- a/series.conf
+++ b/series.conf
@@ -28,7 +28,7 @@
 	# Send separate patches upstream if you find a problem...
 	########################################################
 	patches.kernel.org/patch-2.6.39.1
-	patches.kernel.org/0001-Revert-x86-efi-Retain-boot-service-code-until-after-.patch
+	patches.kernel.org/patch-2.6.39.1-2
 	patches.kernel.org/0002-Revert-HID-magicmouse-ignore-ivalid-report-id-while-.patch
 
         ########################################################
@@ -458,7 +458,6 @@
 	# Allow setting maximum number of raw devices
 	patches.suse/raw_device_max_minors_param.diff
 	patches.suse/no-partition-scan
-	patches.fixes/asus-wmi-Remove-__init-from-asus_wmi_platform_init.patch
 
 	########################################################
 	# Other drivers we have added to the tree
