--- a/series.conf
+++ b/series.conf
@@ -452,6 +452,11 @@
 	patches.drivers/alsa-hda-0027-fix-AZX_DCAPS_NO_TCSEL-quirk-check-in-drive
 
 	########################################################
+	# Char / serial
+	########################################################
+	patches.fixes/tty-ldisc-do-not-close-until-there-are-readers.patch
+
+	########################################################
 	# Other driver fixes
 	########################################################
 	patches.fixes/parport-mutex
