TTY: ldisc, do not close until there are readers (bnc#698247 bnc#693374).

--- a/series.conf
+++ b/series.conf
@@ -428,6 +428,11 @@
 	patches.drivers/alsa-hda-0019-Increase-default-buffer-size
 
 	########################################################
+	# Char / serial
+	########################################################
+	patches.fixes/tty-ldisc-do-not-close-until-there-are-readers.patch
+
+	########################################################
 	# Other driver fixes
 	########################################################
 	patches.fixes/parport-mutex
