- Update Xen patches to 3.0-rc5 and c/s 1095. - xen: prepare tmem shim to handle frontswap. - support booting Xen from EFI (fate#311376, fate#311529,   bnc#578927, bnc#628554). - config.conf: Re-enabled Xen flavors. - Update x86 config files. - Delete patches.xen/xen-blkback-bimodal-suse.

--- a/supported.conf
+++ b/supported.conf
@@ -1615,6 +1615,7 @@
 		kernel/drivers/rtc/rtc-ds1553
 		kernel/drivers/rtc/rtc-ds1672
 		kernel/drivers/rtc/rtc-ds1742
+		kernel/drivers/rtc/rtc-efi
 		kernel/drivers/rtc/rtc-fm3130
 		kernel/drivers/rtc/rtc-isl1208
 		kernel/drivers/rtc/rtc-lib
