--- a/series.conf
+++ b/series.conf
@@ -29,6 +29,7 @@
 	########################################################
 	patches.kernel.org/patch-2.6.39.1
 	patches.kernel.org/patch-2.6.39.1-2
+	patches.kernel.org/patch-2.6.39.2-3
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -246,7 +247,6 @@
         # Networking, IPv6
         ########################################################
 	patches.fixes/bridge-module-get-put.patch
-	patches.fixes/bridge-provide-a-cow_metrics-method-for-fake_ops.patch
 
 	########################################################
 	# NFS
@@ -454,7 +454,6 @@
 	########################################################
 	# Char / serial
 	########################################################
-	patches.fixes/tty-ldisc-do-not-close-until-there-are-readers.patch
 
 	########################################################
 	# Other driver fixes
