hv: only load the driver in a hyper-v guest (bnc#704957).

--- a/series.conf
+++ b/series.conf
@@ -434,6 +434,7 @@
 	########################################################
 	# Other driver fixes
 	########################################################
+	patches.suse/staging-hv-vmbus-init-on-dmi-match.patch
 	patches.fixes/parport-mutex
 
 	patches.suse/no-partition-scan
