tulip: Disable debugging messages by default

--- a/series.conf
+++ b/series.conf
@@ -381,6 +381,7 @@
 	# Network
 	########################################################
 	patches.fixes/tulip-quad-NIC-ifdown
+	patches.fixes/net-tulip-debug-off-by-default.patch
 	patches.drivers/ehea-modinfo.patch
 
 	########################################################
