tg3: Fix io failures after chip reset (bnc#705962).

--- a/series.conf
+++ b/series.conf
@@ -384,6 +384,7 @@
 	patches.fixes/tulip-quad-NIC-ifdown
 	patches.fixes/net-tulip-debug-off-by-default.patch
 	patches.drivers/ehea-modinfo.patch
+	patches.fixes/tg3-Fix-io-failures-after-chip-reset.patch
 
 	########################################################
 	# Wireless Networking
