- Linux 3.0.1. - Refresh   patches.suse/revert-x86-remove-warning-and-warning_symbol-from-struct-stacktrace_ops. - Refresh patches.xen/kexec-move-segment-code-i386.patch. - Refresh patches.xen/kexec-move-segment-code-x86_64.patch. - Refresh patches.xen/xen3-patch-2.6.36. - Delete patches.fixes/SCSI-fix-crash-in-scsi_dispatch_cmd.patch.

--- a/series.conf
+++ b/series.conf
@@ -27,6 +27,7 @@
 	# DO NOT MODIFY THEM!
 	# Send separate patches upstream if you find a problem...
 	########################################################
+	patches.kernel.org/patch-3.0.1
 
         ########################################################
         # Build fixes that apply to the vanilla kernel too.
@@ -368,7 +369,6 @@
 	patches.fixes/sd_liberal_28_sense_invalid.diff
 
 	patches.fixes/scsi-ibmvscsi-module_alias.patch
-	patches.fixes/SCSI-fix-crash-in-scsi_dispatch_cmd.patch
 
 	########################################################
 	# DRM/Video
