- Update to 3.1-rc3.   - Eliminated 8 patches.   - Xen is disabled.

--- a/series.conf
+++ b/series.conf
@@ -62,7 +62,6 @@
 	patches.suse/supported-flag-enterprise
 	patches.suse/genksyms-add-override-flag.diff
 	patches.suse/kconfig-automate-kernel-desktop
-	patches.fixes/no-built-in-root_dev
 
         ########################################################
         # Simple export additions/removals
@@ -110,11 +109,10 @@
 +needs_update	patches.arch/kvm-split-the-KVM-pv-ops-support-by-feature
 +needs_update	patches.arch/kvm-replace-kvm-io-delay-pv-ops-with-linux-magic
 
-	patches.arch/mtrr_stop_machine_quick_fix.patch
-	patches.arch/kill-__stop_machine.patch
-	patches.arch/reorganize_stop_cpus.patch
-	patches.arch/implement_stop_machine_from_offline_cpu.patch
-	patches.arch/use_stop_machine_for_mtrr_rendezvous.patch
++trenn	patches.arch/kill-__stop_machine.patch
++trenn	patches.arch/reorganize_stop_cpus.patch
++trenn	patches.arch/implement_stop_machine_from_offline_cpu.patch
++trenn	patches.arch/use_stop_machine_for_mtrr_rendezvous.patch
 
 	########################################################
 	# x86 MCE/MCA (Machine Check Error/Architecture) extensions
@@ -202,8 +200,6 @@
 
 	patches.arch/acpi_fix_fadt_32_bit_zero_length.patch
 
-+needs_update-32	patches.arch/acpi_ec_provide_non_interrupt_mode_boot_param.patch
-
 	# Adjust this patch for every new product (at least Enterprise
 	# level) to provide OEMs a safety break so that they can add
 	# for example SLE11 specific BIOS updates (if there is no other
@@ -244,7 +240,6 @@
 	########################################################
 	# NFS
 	########################################################
-	patches.fixes/nfs-slot-table-alloc
 
 +needs_update37	patches.fixes/nfsd-06-sunrpc-cache-retry-cache-lookups-that-return-ETIMEDO.patch
 	patches.fixes/nfs-adaptive-readdir-plus
@@ -260,7 +255,6 @@
 	########################################################
 	# ext2/ext3
 	########################################################
-	patches.suse/ext3-barrier-default
 #	patches.suse/ext2-fsync-err
 
 	########################################################
@@ -274,7 +268,6 @@
 	########################################################
 	# Reiserfs Patches
 	########################################################
-	patches.suse/reiserfs-barrier-default
 	patches.fixes/reiserfs-force-inode-evictions-before-umount-to-avoid-crash
 +needs_updating-39	patches.suse/reiser4-dependencies
 
@@ -313,7 +306,6 @@
 	patches.suse/0014-richacl-xattr-mapping-functions.patch
 	patches.suse/0015-ext4-Use-IS_POSIXACL-to-check-for-POSIX-ACL-support.patch
 	patches.suse/0016-ext4-Implement-richacl-support-in-ext4.patch
-	patches.suse/richacl-fix
 
 	########################################################
 	# other filesystem stuff
@@ -341,10 +333,6 @@
 	# Storage
 	########################################################
 
-	# I believe this has been obsoleted upstream by
-	# commit d8d9129e
-+disabled	patches.drivers/libata-unlock-hpa-by-default
-
 	# Block layer fixes
 	patches.fixes/scsi-inquiry-too-short-ratelimit
 	patches.suse/scsi-netlink-ml
@@ -368,7 +356,6 @@
 	patches.fixes/sd_liberal_28_sense_invalid.diff
 
 	patches.fixes/scsi-ibmvscsi-module_alias.patch
-	patches.fixes/SCSI-fix-crash-in-scsi_dispatch_cmd.patch
 
 	########################################################
 	# DRM/Video
@@ -384,7 +371,6 @@
 	patches.fixes/tulip-quad-NIC-ifdown
 	patches.fixes/net-tulip-debug-off-by-default.patch
 	patches.drivers/ehea-modinfo.patch
-	patches.fixes/tg3-Fix-io-failures-after-chip-reset.patch
 
 	########################################################
 	# Wireless Networking
@@ -428,7 +414,6 @@
 	##########################################################
 	# Sound
 	##########################################################
-	patches.drivers/alsa-hda-Add-Kconfig-for-the-default-buffer-size
 
 	########################################################
 	# Char / serial
@@ -509,7 +494,7 @@
 	patches.suse/stack-unwind
 	patches.suse/revert-x86-remove-warning-and-warning_symbol-from-struct-stacktrace_ops
 	patches.suse/no-frame-pointer-select
-	patches.arch/x86_64-unwind-annotations
++jbeulich	patches.arch/x86_64-unwind-annotations
 
         ########################################################
         # Kdump
@@ -556,114 +541,114 @@
 # on top of them instead.  This reduces workload when
 # re-basing to a newer xen tree.
 #
-	### both uml framebuffer and xen need this one.
-	patches.xen/add-console-use-vt
-
-	# split out patches
-	patches.xen/kexec-move-segment-code-i386.patch
-	patches.xen/kexec-move-segment-code-x86_64.patch
-	patches.xen/ipv6-no-autoconf
-	patches.xen/pci-guestdev
-	patches.xen/pci-reserve
-
-	# bulk stuff, new files for xen
-	patches.xen/xen3-auto-xen-arch.diff
-	patches.xen/xen3-auto-xen-drivers.diff
-	patches.xen/xen3-auto-include-xen-interface.diff
-	patches.xen/xen3-auto-blktap2-pvops.diff
-
-	# kconfig bits for xen
-	patches.xen/xen3-auto-xen-kconfig.diff
-
-	# common code changes
-	patches.xen/xen3-auto-common.diff
-	patches.xen/xen3-auto-arch-x86.diff
-	patches.xen/xen3-auto-arch-i386.diff
-	patches.xen/xen3-auto-arch-x86_64.diff
-
-	# fixups due to upstream Xen parts
-	patches.xen/xen3-fixup-xen
-
-	# newer changeset backports
-
-	# changes outside arch/{i386,x86_64}/xen
-	patches.xen/xen3-fixup-kconfig
-	patches.xen/xen3-fixup-common
-	patches.xen/xen3-fixup-arch-x86
-	patches.xen/xen3-fixup-blktap2-pvops
-
-	# ports of other patches
-	patches.xen/xen3-patch-2.6.18
-	patches.xen/xen3-patch-2.6.19
-	patches.xen/xen3-patch-2.6.20
-	patches.xen/xen3-patch-2.6.21
-	patches.xen/xen3-patch-2.6.22
-	patches.xen/xen3-patch-2.6.23
-	patches.xen/xen3-patch-2.6.24
-	patches.xen/xen3-patch-2.6.25
-	patches.xen/xen3-patch-2.6.26
-	patches.xen/xen3-patch-2.6.27
-	patches.xen/xen3-patch-2.6.28
-	patches.xen/xen3-patch-2.6.29
-	patches.xen/xen3-patch-2.6.30
-	patches.xen/xen3-patch-2.6.31
-	patches.xen/xen3-patch-2.6.32
-	patches.xen/xen3-patch-2.6.33
-	patches.xen/xen3-patch-2.6.34
-	patches.xen/xen3-patch-2.6.35
-	patches.xen/xen3-patch-2.6.36
-	patches.xen/xen3-patch-2.6.37
-	patches.xen/xen3-patch-2.6.38
-	patches.xen/xen3-patch-2.6.39
-	patches.xen/xen3-patch-3.0-rc5
-	patches.xen/xen3-stack-unwind
-	patches.xen/xen3-x86_64-unwind-annotations
-
-	# bugfixes and enhancements
-	patches.xen/xen-balloon-max-target
-	patches.xen/xen-blkif-protocol-fallback-hack
-	patches.xen/xen-blkback-cdrom
-	patches.xen/xen-blktap-modular
-	patches.xen/xen-blktap-write-barriers
-	patches.xen/xen-blktap2-use-after-free
-	patches.xen/xen-blktap2-configurable-nr-devs
-	patches.xen/xen-op-packet
-	patches.xen/xen-blkfront-cdrom
-	patches.xen/xen-kconfig-compat
-	patches.xen/xen-cpufreq-report
-	patches.xen/xen-sys-suspend
-	patches.xen/xen-ipi-per-cpu-irq
-	patches.xen/xen-virq-per-cpu-irq
-	patches.xen/xen-clockevents
-	patches.xen/xen-spinlock-poll-early
-	patches.xen/xen-pcpu-hotplug
-	patches.xen/xen-mem-hotplug
-	patches.xen/xen-frontswap
-	patches.xen/xen-swiotlb-heuristics
-	patches.xen/xen-configurable-guest-devices
-	patches.xen/xen-netback-nr-irqs
-	patches.xen/xen-netback-notify-multi
-	patches.xen/xen-netback-generalize
-	patches.xen/xen-netback-multiple-tasklets
-	patches.xen/xen-netback-kernel-threads
-	patches.xen/xen-cxgb3
-	patches.xen/xen-dcdbas
-	patches.xen/xen-floppy
-	patches.xen/xen-sections
-	patches.xen/xen-kzalloc
-	patches.xen/xen-unpriv-build
-	patches.xen/xen-setup-gsi
-	patches.xen/xen-x86-panic-no-reboot
-	patches.xen/xen-x86-dcr-fallback
-	patches.xen/xen-x86-no-lapic
-	patches.xen/xen-x86-pmd-handling
-	patches.xen/xen-x86-bigmem
-	patches.xen/xen-x86-exit-mmap
-	patches.xen/xen-x86-per-cpu-vcpu-info
-	patches.xen/xen-x86-msr-on-pcpu
-	patches.xen/xen-x86-EFI
-	patches.xen/xen-x86_64-pgd-pin
-	patches.xen/xen-x86_64-pgd-alloc-order
-	patches.xen/xen-x86_64-dump-user-pgt
-	patches.xen/xen-x86_64-note-init-p2m
-	patches.xen/xen-x86_64-unmapped-initrd
++jbeulich	### both uml framebuffer and xen need this one.
++jbeulich	patches.xen/add-console-use-vt
++jbeulich
++jbeulich	# split out patches
++jbeulich	patches.xen/kexec-move-segment-code-i386.patch
++jbeulich	patches.xen/kexec-move-segment-code-x86_64.patch
++jbeulich	patches.xen/ipv6-no-autoconf
++jbeulich	patches.xen/pci-guestdev
++jbeulich	patches.xen/pci-reserve
++jbeulich
++jbeulich	# bulk stuff, new files for xen
++jbeulich	patches.xen/xen3-auto-xen-arch.diff
++jbeulich	patches.xen/xen3-auto-xen-drivers.diff
++jbeulich	patches.xen/xen3-auto-include-xen-interface.diff
++jbeulich	patches.xen/xen3-auto-blktap2-pvops.diff
++jbeulich
++jbeulich	# kconfig bits for xen
++jbeulich	patches.xen/xen3-auto-xen-kconfig.diff
++jbeulich
++jbeulich	# common code changes
++jbeulich	patches.xen/xen3-auto-common.diff
++jbeulich	patches.xen/xen3-auto-arch-x86.diff
++jbeulich	patches.xen/xen3-auto-arch-i386.diff
++jbeulich	patches.xen/xen3-auto-arch-x86_64.diff
++jbeulich
++jbeulich	# fixups due to upstream Xen parts
++jbeulich	patches.xen/xen3-fixup-xen
++jbeulich
++jbeulich	# newer changeset backports
++jbeulich
++jbeulich	# changes outside arch/{i386,x86_64}/xen
++jbeulich	patches.xen/xen3-fixup-kconfig
++jbeulich	patches.xen/xen3-fixup-common
++jbeulich	patches.xen/xen3-fixup-arch-x86
++jbeulich	patches.xen/xen3-fixup-blktap2-pvops
++jbeulich
++jbeulich	# ports of other patches
++jbeulich	patches.xen/xen3-patch-2.6.18
++jbeulich	patches.xen/xen3-patch-2.6.19
++jbeulich	patches.xen/xen3-patch-2.6.20
++jbeulich	patches.xen/xen3-patch-2.6.21
++jbeulich	patches.xen/xen3-patch-2.6.22
++jbeulich	patches.xen/xen3-patch-2.6.23
++jbeulich	patches.xen/xen3-patch-2.6.24
++jbeulich	patches.xen/xen3-patch-2.6.25
++jbeulich	patches.xen/xen3-patch-2.6.26
++jbeulich	patches.xen/xen3-patch-2.6.27
++jbeulich	patches.xen/xen3-patch-2.6.28
++jbeulich	patches.xen/xen3-patch-2.6.29
++jbeulich	patches.xen/xen3-patch-2.6.30
++jbeulich	patches.xen/xen3-patch-2.6.31
++jbeulich	patches.xen/xen3-patch-2.6.32
++jbeulich	patches.xen/xen3-patch-2.6.33
++jbeulich	patches.xen/xen3-patch-2.6.34
++jbeulich	patches.xen/xen3-patch-2.6.35
++jbeulich	patches.xen/xen3-patch-2.6.36
++jbeulich	patches.xen/xen3-patch-2.6.37
++jbeulich	patches.xen/xen3-patch-2.6.38
++jbeulich	patches.xen/xen3-patch-2.6.39
++jbeulich	patches.xen/xen3-patch-3.0-rc5
++jbeulich	patches.xen/xen3-stack-unwind
++jbeulich	patches.xen/xen3-x86_64-unwind-annotations
++jbeulich
++jbeulich	# bugfixes and enhancements
++jbeulich	patches.xen/xen-balloon-max-target
++jbeulich	patches.xen/xen-blkif-protocol-fallback-hack
++jbeulich	patches.xen/xen-blkback-cdrom
++jbeulich	patches.xen/xen-blktap-modular
++jbeulich	patches.xen/xen-blktap-write-barriers
++jbeulich	patches.xen/xen-blktap2-use-after-free
++jbeulich	patches.xen/xen-blktap2-configurable-nr-devs
++jbeulich	patches.xen/xen-op-packet
++jbeulich	patches.xen/xen-blkfront-cdrom
++jbeulich	patches.xen/xen-kconfig-compat
++jbeulich	patches.xen/xen-cpufreq-report
++jbeulich	patches.xen/xen-sys-suspend
++jbeulich	patches.xen/xen-ipi-per-cpu-irq
++jbeulich	patches.xen/xen-virq-per-cpu-irq
++jbeulich	patches.xen/xen-clockevents
++jbeulich	patches.xen/xen-spinlock-poll-early
++jbeulich	patches.xen/xen-pcpu-hotplug
++jbeulich	patches.xen/xen-mem-hotplug
++jbeulich	patches.xen/xen-frontswap
++jbeulich	patches.xen/xen-swiotlb-heuristics
++jbeulich	patches.xen/xen-configurable-guest-devices
++jbeulich	patches.xen/xen-netback-nr-irqs
++jbeulich	patches.xen/xen-netback-notify-multi
++jbeulich	patches.xen/xen-netback-generalize
++jbeulich	patches.xen/xen-netback-multiple-tasklets
++jbeulich	patches.xen/xen-netback-kernel-threads
++jbeulich	patches.xen/xen-cxgb3
++jbeulich	patches.xen/xen-dcdbas
++jbeulich	patches.xen/xen-floppy
++jbeulich	patches.xen/xen-sections
++jbeulich	patches.xen/xen-kzalloc
++jbeulich	patches.xen/xen-unpriv-build
++jbeulich	patches.xen/xen-setup-gsi
++jbeulich	patches.xen/xen-x86-panic-no-reboot
++jbeulich	patches.xen/xen-x86-dcr-fallback
++jbeulich	patches.xen/xen-x86-no-lapic
++jbeulich	patches.xen/xen-x86-pmd-handling
++jbeulich	patches.xen/xen-x86-bigmem
++jbeulich	patches.xen/xen-x86-exit-mmap
++jbeulich	patches.xen/xen-x86-per-cpu-vcpu-info
++jbeulich	patches.xen/xen-x86-msr-on-pcpu
++jbeulich	patches.xen/xen-x86-EFI
++jbeulich	patches.xen/xen-x86_64-pgd-pin
++jbeulich	patches.xen/xen-x86_64-pgd-alloc-order
++jbeulich	patches.xen/xen-x86_64-dump-user-pgt
++jbeulich	patches.xen/xen-x86_64-note-init-p2m
++jbeulich	patches.xen/xen-x86_64-unmapped-initrd
