--- a/config.conf
+++ b/config.conf
@@ -12,8 +12,8 @@
 +i386		i386/desktop
 +i386		i386/pae
 +i386 -syms	i386/debug
-+i386		i386/xen
-+i386 -syms	i386/ec2
+#+i386		i386/xen
+#+i386 -syms	i386/ec2
 +i386 		i386/vanilla
 +i386 -syms	i386/trace
 
@@ -24,8 +24,8 @@
 
 +x86_64		x86_64/default
 +x86_64		x86_64/desktop
-+x86_64		x86_64/xen
-+x86_64	-syms	x86_64/ec2
+#+x86_64		x86_64/xen
+#+x86_64	-syms	x86_64/ec2
 +x86_64	-syms	x86_64/debug
 +x86_64		x86_64/vanilla
 +x86_64 -syms	x86_64/trace
@@ -36,7 +36,7 @@
 # G5 PS3 pSeries
 +ppc		ppc/ppc64
 # PS3 bootloader
-+ppc -syms	ppc/ps3
+#+ppc -syms	ppc/ps3
 # maybe the kernels above were patched to death?
 +ppc		ppc/vanilla
 
