- Refreshed and re-enabled dm-path patches:   - patches.suse/dm-mpath-accept-failed-paths.   - patches.suse/dm-mpath-detach-existing-hardware-handler.

--- a/series.conf
+++ b/series.conf
@@ -448,10 +448,9 @@
 	patches.suse/dm-raid45-api-3.0
 	patches.fixes/dm-mpath-reattach-dh
 	patches.suse/dm-mpath-leastpending-path-update
-+needs_update	patches.suse/dm-mpath-accept-failed-paths
-+needs_update	patches.suse/dm-mpath-detach-existing-hardware-handler
+	patches.suse/dm-mpath-accept-failed-paths
+	patches.suse/dm-mpath-detach-existing-hardware-handler
 	patches.fixes/dm-table-switch-to-readonly
-+needs_update	patches.suse/dm-mpath-evaluate-request-result-and-sense
 	patches.fixes/dm-release-map_lock-before-set_disk_ro
 	patches.suse/dm-mpath-no-activate-for-offlined-paths
 	patches.suse/dm-mpath-no-partitions-feature
