--- a/series.conf
+++ b/series.conf
@@ -102,7 +102,7 @@
         ########################################################
 	# x86_64/i386 biarch
         ########################################################
-+needs_update-33	patches.arch/x86_64-hpet-64bit-timer.patch
+	patches.arch/x86_64-hpet-64bit-timer.patch
 
 +needs_update	patches.arch/kvm-split-paravirt-ops-by-functionality
 +needs_update	patches.arch/kvm-only-export-selected-pv-ops-feature-structs
