- PTI: depends on X86 && PCI.

--- a/series.conf
+++ b/series.conf
@@ -35,6 +35,7 @@
         ########################################################
 	patches.rpmify/apm-honor-config_apm_cpu_idle-n
 	patches.rpmify/nouveau-make-vga_switcheroo-code-depend-on-vga_switcheroo
+	patches.rpmify/pti-depends-on-x86-pci
 
         ########################################################
         # kABI consistency patches
