--- a/series.conf
+++ b/series.conf
@@ -35,7 +35,7 @@
         ########################################################
 	patches.rpmify/apm-honor-config_apm_cpu_idle-n
 	patches.rpmify/nouveau-make-vga_switcheroo-code-depend-on-vga_switcheroo
-#	patches.rpmify/pti-depends-on-x86-pci
+	patches.rpmify/pti-depends-on-x86-pci
 
         ########################################################
         # kABI consistency patches
