TTY: pty, fix pty counting (bnc#711203).

--- a/series.conf
+++ b/series.conf
@@ -435,6 +435,7 @@
 	########################################################
 	# Char / serial
 	########################################################
+	patches.fixes/pty-fix-pty-counting.patch
 
 	########################################################
 	# Other driver fixes
