Staging: hv: vmbus: Show the modalias in /sys/bus/vmbus/devices/*/ (fate#311487).

--- a/series.conf
+++ b/series.conf
@@ -541,6 +541,7 @@
 	patches.suse/staging-hv-staging-next-20110829-0345-Staging-hv-mousevsc-Fix-checkpatch-errors-and-war.patch
 	patches.suse/staging-hv-staging-next-20110829-0346-Staging-hv-netvsc-return-negative-error-codes.patch
 
+	patches.suse/staging-hv-vmbus-modalias-show.patch
 	patches.suse/staging-hv-pata_piix-ignore-disks.patch
 	patches.fixes/parport-mutex
 
